--- a/src/List.css
+++ b/src/List.css
@@ -1,5 +1,12 @@
 .content {
-    color: white;
     background-color: darkblue;
+}
+
+.test {
+    background-color: peru
+}
+
+.article-desc {
+    color: white;
     padding: 15px;
 }
