--- a/src/components/Products/ProductsListItem.scss
+++ b/src/components/Products/ProductsListItem.scss
@@ -36,3 +36,12 @@
     display: flex;
     justify-content: center;
 }
+
+.product-quantity {
+    display: flex;
+    margin-top: 10px;
+
+    input {
+        text-align: center;
+    }
+}
