как можно стилизировать страницу из массива иначе на другой странице

--- a/src/components/Products/ProductsListItem.scss
+++ b/src/components/Products/ProductsListItem.scss
@@ -15,6 +15,15 @@
 .product-title {
     font-size: 22px;
     margin-bottom: 15px;
+
+    a {
+        color: black;
+        text-decoration: none;
+
+        &:hover {
+            color: grey;
+        }
+    }
 }
 
 .product-description {
@@ -44,4 +53,8 @@
     input {
         text-align: center;
     }
+}
+
+.red {
+    color: red;
 }
